demo v3 w/ video tutorial

--- a/index.html
+++ b/index.html
@@ -47,18 +47,22 @@
                 <p>The following practice is an application of  <b>Water Logic</b>, a dimension of thinking identified by Edward de Bono (psychologist and philosopher) in the 1990s. Water Logic clarifies the “flow” of our thinking processes from one thought to another, contineously...</p>
             </waterlogic>
             <example-1 id = page4>
-                <p>For example, when I think about <i>happiness</i>… I think about <i>love</i></p>
-                <img src = "data/page4.png">
+                <p>For example, when I think about <i>happiness</i>… I think about <i>love</i>. Naturally, <i>love</i> reminds me of my <i>family</i>, and then I think about <i>home</i> and <i>Chinese food</i>...</p>
+                 <p>As our thinking goes on and on, it might go back to where we have already been, and form a loop </p>
+                <video autoplay="autoplay">
+                  <source src="data/tutorial.mp4" type="video/mp4">
+                </video>
             </example-1>
+<!--
             <example-2 id = page5>
                 <p>For example, when I think about <i>happiness</i>… I think about <i>love</i></p>
-                <p>Naturally, <i>love</i> reminds me of my <i>family</i> </p>
+                
                 <img id=tutorialimg src = "data/page6.png">
             </example-2>
             <example-3 id = page6>
                 <p>For example, when I think about <i>happiness</i>… I think about <i>love</i></p>
                 <p>Naturally, <i>love</i> reminds me of my <i>family</i> </p>            
-                <p>And then I think about our last <i>holiday in Australia</i> </p>
+
                 <img id = tutorialimg src = "data/page7.png">
             </example-3>
             <example-4 id = page7>
@@ -71,15 +75,16 @@
                 <p>As our thinking goes on and on, it might go back to where we have already been, and form a loop </p>
                 <img id = tutorialimg8 src = "data/page9.png">
             </example-5>
-            <example-6 id = page9>
+-->
+            <example-5 id = page5>
                 <p>and finally a large, complex structure will appear, like the following graphs… </p>
                 <p>These graphs have significant meanings and we are about to find out.</p>
                 <img id=tutorialimg9 src = "data/page10.png">
-            </example-6>            
-            <example-7 id = page10>
+            </example-5>            
+            <example-6 id = page6>
                 <p>To sum up, this experience is entirely personal and reflexive. Everybody thinks differently, therefore generates unique thought patterns. Your graph captures the moment of thought processes unique to you, your mind, at this point in your life. </p>
-            </example-7>  
-            <final id = page11>
+            </example-6>  
+            <final id = page7>
                 <p> If you want to rewatch the tutorial, press the "rewatch" button. If you are ready to try out the software tool, press the "trial" button. Otherwise, press "next" to start the test. </p>
                 <button id = "rewatch" > Rewatch </button>
                 <button id = "try" > Trial </button>
@@ -87,9 +92,10 @@
             </final> 
         </tutorial>
         <demo> 
-            <baseline id = page12> 
-            <h2> What is the <i>value</i> of <i>nature</i>? </h2>
-                <p> Think deeply and seriously. Write down anything  comes up to your mind with honesty (can be personal, philosophical, or emotional... the freedom is yours) and click the "submit" button or "enter" key to see the thought pops to the screen. Press "finish" when you feel like you are done. </p>
+            <baseline id = page8> 
+            <h2> Why do you <i>value</i> <i>nature</i>? </h2>
+                <p> Think deeply and seriously. Write down anything  comes up to your mind with honesty (can be personal, philosophical, or emotional... the freedom is yours) and click the "submit" button or "enter" key to see the thought pops to the screen. Press "finish" when you feel like you are done and then press "next". </p>
+                <p><i> Be careful you cannot change or delete (for now)</i></p>
 
             <form name="Baseline Generation" onSubmit="return enter()">
                 <input type="text" id="myInput" placeholder="Add some text&hellip;">
@@ -97,11 +103,11 @@
                 <input name="Finish"  type="button" value="Finish" onclick ="interactionBegins()">
             </form>
             </baseline> 
-            <flow id = page13>
-                <p>Imagine your thinking is the river that flows in one direction... Choose one thought to start with, connect it to the next, to which it naturally <i>flows</i> or relates. Repeat this to let the river flow to the next thought, and the next thought until the river forms a loop. Then, we will start a <i>new river</i> and do this again. <i> Be careful you cannot change or delete (for now)</i> </p>
+            <flow id = page9>
+                <p>Imagine your thinking is the river that flows in one direction... Choose one thought to start with, connect it to the next, to which it naturally <i>flows</i> or relates. Repeat this to let the river flow to the next thought, and the next thought until the river forms a loop. Then, we will start a <i>new river</i> and do this again.  </p>
                 <p><i> Be careful you cannot change or delete (for now)...</i> :) </p>
             </flow>
-            <analysis id = page14>
+            <analysis id = page10>
                 The graph analysis is as follows
             </analysis>
         </demo>       
