--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 
             </opening>
             <introduction id = page2>
-                <p>First of all, we would like to inform you up front that this thinking exercise might come across a little unusual. In fact, the tasks you will be taught here is not what we are used to do on a regular basis. But don't worry about it. In the next step, we will be demonstrating the techniques through a step-by-step tutorial. When you are ready, click the "next" button. </p>
+                <p>First of all, we would like to inform you up front that this thinking exercise might come across as a little unusual. In fact, the tasks you will be taught here is not what we are used to do on a regular basis. But don't worry about it. In the next step, we will be demonstrating the techniques through a step-by-step tutorial. When you are ready, click the "next" button. </p>
             </introduction>
             <waterlogic id = page3>
                 <p>The following practice is an application of  <b>Water Logic</b>, a dimension of thinking identified by Edward de Bono (psychologist and philosopher) in the 1990s. Water Logic clarifies the “flow” of our thinking processes from one thought to another, contineously...</p>
