--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <img src = "data/logo.png">
         <nav>
             <ul>
-                <li><a href = "#tutorial">Tutorial</a></li>
+                <li><a href = "index.html">Tutorial</a></li>
                 <li><a href = "demo.html">Demo</a></li>
-                <li><a href = "#science">Science</a></li>
+                <li><a href = "water.html">Water</a></li>
             </ul>
         </nav>
 </header>    
