v3 updated with questionaire

--- a/index.html
+++ b/index.html
@@ -113,6 +113,27 @@
             <analysis id = page10>
                 The graph analysis is as follows
             </analysis>
+            
+            <questionaire id = page11>
+                <profession class = "form-item">
+                   <input type="checkbox" name="student" value="student" id="student">
+                        <label for="student">Student</label>
+                        <input type="checkbox" name="professional" value="professional" id="professional">
+                        <label for="professional">Professional</label>
+                </profession>
+                <feedback class = "form-item">
+                        <p> Did you learn something about yourself? <br/> Were you surprised by the analysis?</p>
+                        <textarea id="personalUse" name="persuse"name="Text1" cols="40" rows="4"></textarea>
+                </feedback>
+                <embodiment class = "form-item">
+                    <p>Where do you think this tool can be useful?</p>
+                        <textarea id="useCases" name="usecases" cols="40" rows="4"></textarea>
+                </embodiment>
+                <comments class = "form-item">
+                    <p>Do you have any further comments?</p>
+                        <textarea id="AnyComments" name="comments" cols="40" rows="4"></textarea>
+                </comments>
+            </questionaire>
         </demo>       
     </central-content> 
 <button-next id="next" class="button"> next </button-next>    
