--- a/index.html
+++ b/index.html
@@ -114,32 +114,9 @@
             </playground> 
             <questionaire id = "questionaire">
                 <form name = "questionaire" method="POST" data-netlify="true" >
-<!--
-                <name class = "form-item">
-                    Name  
-                    <input type="text" id="myInput" placeholder="Add some text&hellip;">
-                </name>
-                <email class = "form-item">
-                    Email 
-                    <input class = "questionaire-input" type="email" name="email" id="myInput" placeholder="Add your email">
-                </email>
-                <profession class = "form-item">
-                        Profession
-                        <input type="text" name="profession" id="myInput" placeholder="Add your email">
-                </profession>
--->
-                <feedback class = "form-item">
-                        <p> Did you learn something about yourself? </p>
-                        <textarea id="personalUse" name="persuse"name="Text1" cols="40" rows="4"></textarea>
-                </feedback>
-                <embodiment class = "form-item">
-                    <p>Where do you think this tool can be useful?</p>
-                        <textarea id="useCases" name="usecases" cols="40" rows="4"></textarea>
-                </embodiment>
-                <comments class = "form-item">
-                    <p>Do you have any further comments?</p>
-                        <textarea id="AnyComments" name="comments" cols="40" rows="4"></textarea>
-                </comments>
+                  <p>
+                    <label>Message: <textarea id="graph-analysis" name="message"></textarea></label>
+                  </p>
                 <button type="submit">Send</button>
             </form>
             </questionaire>    
