v4 - Demo #2 - Exam Version - send data

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <questionaire id = "questionaire">
                 <form name = "questionaire" method="POST" data-netlify="true" >
                   <p>
-                    <label>Message: <textarea id="graph-analysis" name="message"></textarea></label>
+                    <label>Send Charlotte Your Data <textarea id="graph-analysis" name="data"></textarea></label>
                   </p>
                 <button type="submit">Send</button>
             </form>
