--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                 <tutorial-content2 id = tut2> 
                     <h3>1. Stream of Consciousness</h3>
                     <p>If we think about how we think… our brain rarely seems to stop generating thoughts or processing information. When you think about some aspect of an issue, naturally your thinking flows from one thought to another. As an example, when I think about happiness, I think about love. Naturally, love reminds me of my family, and then I think about home and the favourite dish my mom made… this continuous, uninterrupted flow of thoughts is called the “stream of consciousness”.  <br/> <br/> As the first step of Mindscaping, you will be asked to generate the “stream of consciousness” around a question.</p>
-                    <p>If we think about how we think… our brain rarely seems to stop generating thoughts or processing information. When you think about some aspect of an issue, naturally your thinking flows from one thought to another. As an example, when I think about happiness, I think about love. Naturally, love reminds me of my family, and then I think about home and the favourite dish my mom made… this continuous, uninterrupted flow of thoughts is called the “stream of consciousness”.  <br/> <br/> As the first step of Mindscaping, you will be asked to generate the “stream of consciousness” around a question.</p>
-                    <video autoplay="autoplay">
+                    <video id="vid1" autoplay="autoplay">
                       <source src="data/tutorial1.mp4" type="video/mp4">
                     </video>
                 </tutorial-content2> 
@@ -54,7 +53,7 @@
                     <p>Flow is the motion of thinking. Like water flows continuously downhill due to gravity, our thinking is driven by the focus of attention. <br/> <br/> 
                     The second step of Mindscaping is to revisit where your attention has been and map out the trajectory of the flow. Starting from any thought on your screen, connect it with what it naturally relates or flows to. Continue doing so until you are informed “a loop has formed”, and then you will be asked to start again on a new thought you haven’t visited. You might find some of the thoughts stand out and get stuck on where to go next – try to focus on the individual thought in this case. Repeat the process until there is no unvisited thoughts left behind, or every circle has one (and only one) outgoing connection.</p>
 
-                     <video autoplay="autoplay">
+                     <video id="vid2" autoplay="autoplay">
                       <source src="data/tutorial2.mp4" type="video/mp4">
                     </video>
 
