v4 - Demo #2 - Exam Version - send data

--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
                 <p> 
                 Humans, being part of the universe, are limited by time and space, and the experience of self: our internal thoughts and emotions. This kind of delusion of consciousness is called mental models, our internal representations of the external reality. <br/> <br/>
 
-Mindscape is the landscape of the mind, a specialized visualization of our thinking which clarifies and contextualizes our mental models. Mindscaper explores the improvable field of our mental models by bridging the subconscious mind to our conscious thinking. Mindscaper offers a tangible way of understanding, intervening, and upgrading the mental model through a combination of self-inquery and collective data visualization. It aims to facilitate personal paradigm shift which would amplify bigger social changes.              
+                Humans, being part of the universe, are limited by time and space, and the experience of self: our internal thoughts and emotions. This kind of delusion of consciousness is called mental models, our internal representations of the external reality. Mindscape is the landscape of the mind, a specialized visualization of our thinking which clarifies and contextualizes our mental models. Mindscaper explores the improvable field of our mental models by bridging the subconscious mind to our conscious thinking. It offers a tangible way of rewiring our mental models through a combination of self-inquiry and collective data visualization. <br/> <br/>
+                    
+                Mindscaper embodies a new branch of citizen science in human consciousness and complexity science. It aims to facilitate personal paradigm shift which would amplify bigger social changes.             
                 </p>
             
 
