v4 - Demo #2 - Exam Version - send data

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                     <h3 id="nodeCounter"> </h3> 
                 </guide>
                 <analysis>
+                     <h2> Sorry... Silly Charlotte had broken the analysis code and asks you to kindly send her your data at the end of this page before she finalizes the features :') </h2>
                      <feature class ="feature"> 
                          <h4 class ="feature-type">Hubs</h4>
                          <h5>Hubs are the largest node in your graph that represents your values. The bigger the size of, the more weight it carries in the subject you explored.</h5>
