v4 - Demo #2 - Exam Version - send data

--- a/index.html
+++ b/index.html
@@ -90,18 +90,17 @@
                     <h3 id="nodeCounter"> </h3> 
                 </guide>
                 <analysis>
-                     <h2> Sorry... Silly Charlotte had broken the analysis code and asks you to kindly send her your data at the end of this page before she finalizes the features :') </h2>
                      <feature class ="feature"> 
                          <h4 class ="feature-type">Hubs</h4>
-                         <h5>Hubs are the largest node in your graph that represents your values. The bigger the size of, the more weight it carries in the subject you explored.</h5>
+                         <h5>Hubs are the most connected nodes in your graph that represents your values. </h5>
                     </feature>     
                     <feature class ="feature"> 
                          <h4 class ="feature-type">Loop</h4>
-                         <h5>They are highlighted as stablized patterns with closure</h5>
+                         <h5>They are stablized patterns called perceptions, formed in your subconscious. </h5>
                     </feature>
                     <feature class ="feature"> 
                          <h4 class ="feature-type">Connector</h4>
-                         <h5>This is where your train of thoughts enter a stable state. This is where you can intervene in a mental model</h5>
+                         <h5>This is where your train of thoughts enter a stable state (perception), where you can intervene in a mental model</h5>
                     </feature>
                     <feature class ="feature"> 
                          <h4 class ="feature-type">Length of the Links</h4>
