--- a/mindscapes.html
+++ b/mindscapes.html
@@ -5,7 +5,7 @@
     <title>Mindscapes: Landscapes of the Mind</title> 
 <!--    <script type="text/javascript" src="jquery-3.4.1.min.js"></script> -->
     <script src="//d3js.org/d3.v4.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <header>
