--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Mindscapes: Landscapes of the Mind</title> 
+    <title>Mindscapes: Capturing Landscapes of the Mind</title> 
     <script src="d3/d3.min.js"></script>
     <script type="text/javascript" src="jquery-3.4.1.min.js"></script> 
     <link rel="stylesheet" type="text/css" href="style.css">
