--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
     
 <body>
 <header>
-    <a href="index.html"><img src = "data/logo1.png" ></a>   
+    <a href="mindscapes.html"><img src = "data/logo1.png" ></a>   
        
 <!--
         <nav id = navbar>
