--- a/intro.html
+++ b/intro.html
@@ -42,6 +42,18 @@
         <div class = "container" id = "what-it-is">
             
             <h1>What it is </h1>
+            
+            <box class = "box" id = "emotions">
+                <div>
+                    <h2 class = "function">Mapping intuitive thinking. </h2>
+                    <h3 class = "problem">We are taught and well-trained to think rationally. In fact, 90% of our thoughts happen in the background of our mind. They are constantly processing and the thought process tend to be cyclical.</h3>
+                </div>
+<!--
+                <video autoplay="autoplay">
+                      <source src="../data/tutorial1.mp4" type="video/mp4">
+                </video>
+-->
+            </box> 
             <box class = "box" id = "emotions">
                 <div>
                     <h2 class = "function">Making time for reflection. </h2>
